tests/ui/issues/issue-22638.stderr
error: reached the recursion limit while instantiating `A::matches::<C::matches<B::matches<...>::{closure#0}>::{closure#0}>`
  --> $DIR/issue-22638.rs:54:9
   |
LL |         a.matches(f)
   |         ^^^^^^^^^^^^
   |
note: `A::matches` defined here
  --> $DIR/issue-22638.rs:13:5
   |
LL |     pub fn matches<F: Fn()>(&self, f: &F) {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the full type name has been written to '$TEST_BUILD_DIR/issue-22638.long-type.txt'

error: aborting due to 1 previous error

